--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,1 +1,8 @@
-<p>login-page works!</p>
+<div class="login-page">
+    <div class="login-page__form">
+        <h2>Login</h2>
+        <input />
+        <input />
+        <button>Login</button>
+      </div>
+</div>
